Bug 1600889 - gShuttingDownThread in nsUrlClassifierDBService should be Atomic r=gcp

Differential Revision: https://phabricator.services.mozilla.com/D57954